fix: first code-review pass — Redis/pattern correctness, security & Lua refactor (#2)
* chore: ignore debug/ output directory

debug/ holds JSON reports written by the host git-pr-merge / git-check
tooling; it is generated, not source.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

* fix(redis): stream consumer-group semantics, connection leaks & pattern correctness

- DLQMessagingService: XREADGROUP .block(0) -> .block(2000) so an empty stream
  no longer hangs the request thread and leaks its pooled connection; fix the
  misleading "$/end" comment (the group is created at 0-0 on purpose);
  getDeliveryCount returns 1 (not a hardcoded 2) on an XPENDING miss; claimOrDLQ
  now populates messagesToDLQ and stops mislabelling new messages as "reclaimed".
- RedisStreamListenerService: start the live monitor at $ (LAST_ENTRY) instead
  of 0-0 so a restart no longer re-broadcasts the whole stream history.
- WorkQueue/FanOut: correct the consumer-group start-id comments and document the
  at-least-once XADD-done/XACK contract; null-guard BUSYGROUP message checks.
- ScheduledMessages: null-check ZSCORE before longValue() (concurrent delete no
  longer NPEs) and clean up any orphaned scheduled hash.
- ContentBasedRouting: a missing/non-numeric amount is treated as malformed
  (DLQ path) instead of being silently coerced to 0 and routed as a low payment.
- RequestReply: broadcastResponse handles a null/unknown responseType instead of
  throwing NPE after the message was already XACKed.

Refs docs/specs/code-review-findings.md (F1, F2, F8, S1, S2, S3, S4, F7).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

* fix(pubsub): dedicated subscriber connections with reconnect; JSON payloads

Blocking SUBSCRIBE/PSUBSCRIBE previously borrowed a connection from the shared
JedisPool and held it for life (permanently shrinking the pool), with no
reconnect — a single Redis drop killed pub/sub and keyspace-expiry timeouts
until restart.

- Use a dedicated Jedis connectio