@@ -1,5 +1,6 @@
 package com.redis.patterns.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -7,42 +8,59 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 
 /**
  * Global CORS configuration for the application.
- * 
- * This configuration allows cross-origin requests from the Angular frontend
- * running on localhost:4200 to access the Spring Boot backend on localhost:8080.
- * 
- * IMPORTANT: This is a development configuration. For production, you should:
- * - Specify exact allowed origins instead of "*"
+ *
+ * This configuration allows cross-origin requests from an explicit allow-list of
+ * origins (default: the local Angular frontend on localhost:4200 and the Spring Boot
+ * backend on localhost:8080) to access the API. The list is overridable via the
+ * APP_CORS_ALLOWED_ORIGINS environment variable / app.cors.allowed-origins property.
+ *
+ * An explicit allow-list is required here because credentials are enabled: the
+ * wildcard "*" origin is forbidden by the CORS spec when allowCredentials is true.
+ *
+ * IMPORTANT: This remains a demo configuration. For production, you should:
+ * - Restrict the allow-list to your real deployed front-end origin(s)
  * - Review and restrict allowed methods and headers
  * - Consider using Spring Security for more fine-grained control
- * 
+ *
  * @author Redis Patterns Team
  */
 @Configuration
 public class CorsConfig {
 
     /**
+     * Comma-separated list of allowed origins.
+     * Defaults to the local frontend and backend; override via
+     * APP_CORS_ALLOWED_ORIGINS / app.cors.allowed-origins.
+     */
+    @Value("${app.cors.allowed-origins:http://localhost:4200,http://localhost:8080}")
+    private String allowedOrigins;
+
+    /**
      * Creates a CORS filter that applies to all endpoints.
-     * 
+     *
      * This filter allows:
-     * - All origins (*)
+     * - An explicit allow-list of origins (from app.cors.allowed-origins)
      * - All HTTP methods (GET, POST, PUT, DELETE, etc.)
      * - All headers
      * - Credentials (cookies, authorization headers)
-     * 
-     * @return CorsFilter configured for development
+     *
+     * @return CorsFilter configured for the demo
      */
     @Bean
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
-        
-        // Allow all origins (for development)
-        config.setAllowedOriginPatterns(Collections.singletonList("*"));
-        
+
+        // Explicit allow-list of origins (required because credentials are enabled)
+        List<String> origins = Arrays.stream(allowedOrigins.split(","))
+                .map(String::trim)
+                .filter(origin -> !origin.isEmpty())
+                .toList();
+        config.setAllowedOrigins(List.copyOf(origins));
+
         // Allow credentials (cookies, authorization headers)
         config.setAllowCredentials(true);
         
